# TaxSight

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture-diagram.html
src/ai_tax_prep/: __init__.py
src/ai_tax_prep/cli/: app.py  documents.py  interview.py  report.py
src/ai_tax_prep/config/: settings.py
src/ai_tax_prep/core/: interview_engine.py  interview_steps.py  session.py  tax_profile.py
src/ai_tax_prep/db/: database.py  models.py  repository.py
src/ai_tax_prep/documents/: ocr.py  parser.py  schemas.py  vision.py
src/ai_tax_prep/export/: pdf_report.py  templates.py
src/ai_tax_prep/llm/: client.py  context_manager.py  guardrails.py  prompts.py
src/ai_tax_prep/tax/: custom_calcs.py  deductions.py  engine.py  policyengine_adapter.py
tests/: conftest.py
tests/unit/: test_custom_calcs.py  test_document_schemas.py  test_guardrails.py  test_interview_steps.py  test_tax_profile.py
