[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taxsight"
version = "0.1.0"
description = "TaxSight - Privacy-first AI tax preparation tool with BYOK LLM support"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Saurabh Saha" },
]
dependencies = [
    "typer[all]>=0.12.0",
    "litellm>=1.40.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "fpdf2>=2.7.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
policyengine = [
    "policyengine-us>=1.600.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[project.scripts]
taxsight = "ai_tax_prep.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_tax_prep"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "llm: tests that require a real LLM API key",
]
